Forked from jedi-academy/starter-quotes
- Fixed the link for the first person (zzz)