@@ -41,6 +41,6 @@
 $route['default_controller'] = "welcome";
 $route['404_override'] = '';
 $route['sleep'] = 'first/zzz';
-
+$route['show/(:num)'] = 'first/gimme/$1';
 /* End of file routes.php */
 /* Location: ./application/config/routes.php */
