@@ -36,6 +36,15 @@ class First extends Application {
         $this->data = array_merge($this->data, $source);
         $this->render();
     }
+
+    function gimme($id)
+    {
+        $this->data['pagebody'] = 'justone';	// this is the view we want shown
+        // build the list of authors, to pass on to our view
+        $source = $this->quotes->get($id);
+        $this->data = array_merge($this->data, $source);
+        $this->render();
+    }
 }
 
 /* End of file First.php */
