@@ -1,2 +1,3 @@
 Forked from jedi-academy/starter-quotes
 - Fixed the link for the first person (zzz)
+- Fixed the link for the third person (gimme)
